refactor N752 Solution1